Fixed alignment

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -68,3 +68,8 @@ img.icon {
     -moz-box-shadow:    0px 1px 3px 0px rgba(50, 50, 50, 0.53);
     box-shadow:         0px 1px 3px 0px rgba(50, 50, 50, 0.53);
 }
+
+.pure-form .pure-input-1-2 {
+    width: 50%;
+margin-left: 30px;
+}
